--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -24,6 +24,26 @@
             </tr>
         </tbody>
     </table>
+    <form action="mailto@gmail.com" method="post">
+        <table>
+            <tr>
+                <td><label>Yourname: </label></td>
+                <td><input type="text" name="yourName"></td>
+            </tr>
+            <tr>
+                <td><label>Email: </label></td>
+                <td><input type="email" name="yourMail"></td>
+            </tr>
+            <tr>
+                <td><label>Password: </label></td>
+                <td><input type="password" name="yourPassword" id=""></td>
+            </tr>
+            <tr>
+                <td><textarea name="yourMessage" placeholder="Write your message"cols="30" rows="10"></textarea></td>
+            </tr>
+        </table>
+        <input type="submit">
+    </form>
     <!-- <ul>
         <li>Email: 20je0995@ese.iitism.ac.in</li>
         <li>Mobile No.: 9515180061</li>
